# ay1-aspj-webapp

./: .env  .gitignore  .replit  Password Policy  README.md  Test.py  change_role.py  flask_monitoringdashboard.db  hi.txt  pyproject.toml  requirements.txt  reset.py  reset_db.py  run.py  ssl.crt  ssl.key  test1.py
db_scripts/: create_admin.py  create_db.py  make_admin.py  reset_login_attempt.py
flaskblog/: README.md  __init__.py  config.py  logger.py  models.py  password_policy  site.db
flaskblog/admin/: __init__.py  routes.py
flaskblog/errors/: handlers.py
flaskblog/main/: forms.py  routes.py
flaskblog/monitor/: config.cfg
flaskblog/posts/: routes.py
flaskblog/templates/: 2FA.html  account.html  home.html  layout.html  login_2fa.html  post.html  register.html
flaskblog/templates/admin/: accounts.html  create.html  index.html
flaskblog/templates/admin1/: adminlogs.html  master1.html
flaskblog/templates/errors/: 404.html  405.html
flaskblog/templates/main/: charge.html  get-premium.html  home.html  plans.html
flaskblog/templates/users/: account.html  register.html  reset_token.html
flaskblog/users/: forms.py  routes.py  utils.py
monitor/: dashboard.db
webapp/: __init__.py  forms.py  models.py  routes.py  site.db
webapp/static/css/: main.css  main.css.map  main.scss
webapp/templates/: create_book.html  index.html  login.html  register.html
webapp/templates/includes/: base.html  navbar.html  search.html
