[tool.poetry]
name = "repl_python3_ay2-aspj-webapp"
version = "0.1.0"
description = ""
authors = ["lgf2111 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-SQLAlchemy = "^2.5.1"
flask-talisman = "^1.0.0"
Flask-WTF = "^1.0.1"
WTForms = "^3.0.1"
Flask = "^2.1.2"
Flask-Bcrypt = "^1.0.1"
Flask-Login = "^0.6.1"
sentry-sdk = "^1.5.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
