[tool.poetry]
name = "repl_python3_ay2-aspj-webapp"
version = "0.1.0"
description = ""
authors = ["lgf2111 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-Login = "^0.6.1"
python-dotenv = "^0.20.0"
Flask-Bcrypt = "^1.0.1"
Flask-WTF = "^1.0.1"
WTForms = "^3.0.1"
Flask-SQLAlchemy = "^2.5.1"
itsdangerous = "^2.0.0"
Flask = "^2.1.2"
Flask-Mail = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
