[tool.poetry]
name = "repl_nix_flask-blog-secure"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-Admin = "^1.6.0"
Flask-WTF = "^1.0.1"
Flask-Mail = "^0.9.1"
Flask-Login = "^0.6.2"
itsdangerous = "^2.1.2"
Flask = "^2.2.2"
stripe = "^4.0.2"
WTForms = "^3.0.1"
sentry-sdk = "^1.9.5"
Flask-SQLAlchemy = "^2.5.1"
Flask-Limiter = "^2.6.0"
Flask-Bcrypt = "^1.0.1"
Flask-MonitoringDashboard = "^3.1.1"
flask-csp = "^0.10"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
